[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_social_poster"
version = "0.0.6"
authors = [
    { name = "Luca Stanzani", email = "luca.stanzani@yahoo.it" },
]
description = "A library to expose via API the page post functionality for Facebook and Instagram, with or without captions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'requests >= 2.31.0',
    'pydantic-settings >= 2.1.0',
    'pydantic >= 2.5.3',
    'python-dotenv >= 1.0.0'
]